changes for render

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,8 +57,12 @@
     </section>
   </main>
 
+  <script src="config.js"></script>
+  <!-- existing scripts -->
   <script src="js/app.js"></script>   <!-- main quiz flow --><!-- Define API_BASE globally -->
-  <script src="js/auth.js"></script>   <!-- login/register helpers --><!-- Use API_BASE -->
+  <script src="js/auth.js"></script>
+  
+<!-- login/register helpers --><!-- Use API_BASE -->
      
 </body>
 </html>
