--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -45,7 +45,12 @@
     </section>
   </main>
 
+  <script src="config.js"></script>
+  <!-- existing scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/admin.js"></script>
+  <script src="js/app.js"></script>   <!-- main quiz flow --><!-- Define API_BASE globally -->
+  <script src="js/auth.js"></script>
+
 </body>
 </html>
