--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,6 +16,10 @@
     <p><a href="register.html">Create account</a></p>
   </main>
 
+  <script src="config.js"></script>
+  <!-- existing scripts -->
+  <script src="js/app.js"></script>
   <script src="js/auth.js"></script>
+ 
 </body>
 </html>
