--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -11,7 +11,13 @@
     <div id="profile-info"></div>
   </main>
 
-  <script src="js/auth.js"></script>
+
+  <script src="config.js"></script>
+  <!-- existing scripts -->
   <script src="js/profile.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/auth.js"></script>
+
+
 </body>
 </html>
