--- a/frontend/register.html
+++ b/frontend/register.html
@@ -18,6 +18,10 @@
     <p><a href="login.html">Already have an account? Login</a></p>
   </main>
 
-  <script src="js/auth.js"></script>
+    <script src="config.js"></script>
+    <!-- existing scripts -->
+    <script src="js/app.js"></script>
+    <script src="js/auth.js"></script>
+
 </body>
 </html>
