--- a/frontend/test.html
+++ b/frontend/test.html
@@ -31,5 +31,10 @@
         // Run test on page load
         window.addEventListener('DOMContentLoaded', testAPI);
     </script>
+    <script src="config.js"></script>
+    <!-- existing scripts -->
+    <script src="js/app.js"></script>
+    <script src="js/auth.js"></script>
+
 </body>
 </html>
